--- a/.retype/index.html
+++ b/.retype/index.html
@@ -15,22 +15,22 @@
     <meta property="og:url" content="https://tutorials.icdevs.org/">
     <meta property="og:title" content="Who we are">
     <meta property="og:description" content="ICDevs.org (registered as The Internet Computer Developers Education and Discovery Corporation) is a 501(c)3 Texas Non-profit.">
-    <meta property="og:image" content="https://tutorials.icdevs.org/static/icdevs-logo.png">
+    <meta property="og:image" content="https://tutorials.icdevs.org/static/ic-devs-logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://tutorials.icdevs.org/">
     <meta property="twitter:title" content="Who we are">
     <meta property="twitter:description" content="ICDevs.org (registered as The Internet Computer Developers Education and Discovery Corporation) is a 501(c)3 Texas Non-profit.">
-    <meta property="twitter:image" content="https://tutorials.icdevs.org/static/icdevs-logo.png">
+    <meta property="twitter:image" content="https://tutorials.icdevs.org/static/ic-devs-logo.png">
     
     <script>(function () { var el = document.documentElement, m = localStorage.getItem("doc_theme"), wm = window.matchMedia; if (m === "dark" || (!m && wm && wm("(prefers-color-scheme: dark)").matches)) { el.classList.add("dark") } else { el.classList.remove("dark") } })();</script>
 
-    <link href="/resources/css/retype.css?v=1.11.692546415538" rel="stylesheet" data-turbo-track="reload" />
+    <link href="/resources/css/retype.css?v=1.11.692547812827" rel="stylesheet" data-turbo-track="reload" />
 
-    <script type="text/javascript" src="/resources/js/config.js?v=1.11.692546415538" defer data-turbo-track="reload"></script>
+    <script type="text/javascript" src="/resources/js/config.js?v=1.11.692547812827" defer data-turbo-track="reload"></script>
     <script type="text/javascript" src="/resources/js/retype.js?v=1.11" defer data-turbo-track="reload"></script>
-    <script id="lunr-js" type="text/javascript" src="/resources/js/lunr.js?v=1.11.692546415538" defer></script>
+    <script id="lunr-js" type="text/javascript" src="/resources/js/lunr.js?v=1.11.692547812827" defer></script>
 </head>
     <body>
         <div id="docs-app" class="relative text-base antialiased text-gray-700 bg-white font-body dark:bg-dark-850 dark:text-dark-300">
@@ -185,7 +185,7 @@
     </h1>
 </doc-anchor-target>
 <p><figure class="content-center">
-    <img src="/static/icdevs-logo.png" alt="" />
+    <img src="/static/ic-devs-logo.png" alt="" />
     <figcaption class="caption"></figcaption>
 </figure>
 </p>
