--- a/.retype/tutorials/motoko_playground/index.html
+++ b/.retype/tutorials/motoko_playground/index.html
@@ -29,11 +29,11 @@
 
     <script>(function () { var el = document.documentElement, m = localStorage.getItem("doc_theme"), wm = window.matchMedia; if (m === "dark" || (!m && wm && wm("(prefers-color-scheme: dark)").matches)) { el.classList.add("dark") } else { el.classList.remove("dark") } })();</script>
 
-    <link href="/resources/css/retype.css?v=2.2.704998675325" rel="stylesheet" data-turbo-track="reload" />
+    <link href="/resources/css/retype.css?v=2.2.705868030699" rel="stylesheet" data-turbo-track="reload" />
 
-    <script type="text/javascript" src="/resources/js/config.js?v=2.2.704998675325" defer data-turbo-track="reload"></script>
+    <script type="text/javascript" src="/resources/js/config.js?v=2.2.705868030699" defer data-turbo-track="reload"></script>
     <script type="text/javascript" src="/resources/js/retype.js?v=2.2" defer data-turbo-track="reload"></script>
-    <script id="lunr-js" type="text/javascript" src="/resources/js/lunr.js?v=2.2.704998675325" defer></script>
+    <script id="lunr-js" type="text/javascript" src="/resources/js/lunr.js?v=2.2.705868030699" defer></script>
 </head>
 <body>
     <div id="docs-app" class="relative text-base antialiased text-gray-700 bg-white font-body dark:bg-dark-850 dark:text-dark-300">
@@ -171,9 +171,9 @@
 </doc-anchor-target>
 <hr />
 <!-- ## Install - Create - Run -->
-<p>Motoko playground is a simple web interface that allows you to write and deploy motoko code in your web browser. It is a #1 choice for developers that just have started getting to know about the Internet Computer ecosystem and want to learn motoko programing language.</p>
+<p>Motoko playground is a simple web interface that allows you to write and deploy motoko code in your web browser. It is a #1 choice for developers that just have started getting to know about the Internet Computer ecosystem and want to learn the motoko programming language.</p>
 <blockquote>
-<p>Motoko is a programing language developed natively for the Internet Computer blockchain. If you want to learn more about Motoko, visit the <a href="https://smartcontracts.org/docs/language-guide/motoko.html">documentation page</a>.</p>
+<p>Motoko is a programming language developed natively for the Internet Computer blockchain. If you want to learn more about Motoko, visit the <a href="https://smartcontracts.org/docs/language-guide/motoko.html">documentation page</a>.</p>
 </blockquote>
 <doc-anchor-target id="start-first-project">
     <h2>
@@ -187,20 +187,20 @@
     <figcaption class="caption">Create a new project</figcaption>
 </figure>
 </p>
-<p>You should se a modal window simmilar to the screen above that is basically giving you three options:</p>
+<p>You should see a modal window similar to the screen above that is basically giving you three options:</p>
 <ol>
 <li>Create a new blank project</li>
 <li>Open one of the pre-prepared projects</li>
 <li>Import code from public Github repo</li>
 </ol>
-<p>If you want to start coding from scratch, clicking on New Motoko project is the best option for you. In this tutorial, let&#x27;s click on the <strong>Counter</strong> example so we can demonstrate how to use the playground.</p>
-<p>This will get you the a Readme file that describes the project and presents how to deploy the code locally on your computer. As Motoko playground is working in the browser, <strong>you don&#x27;t need to set up your local development enviroment and install the SKD now</strong>. Skip this and just click to the Main.mo file on the left hand side. This will bring you to the code.</p>
+<p>If you want to start coding from scratch, clicking on the New Motoko project is the best option for you. In this tutorial, let&#x27;s click on the <strong>Counter</strong> example so we can demonstrate how to use the playground.</p>
+<p>This will get you to a readme file that describes the project and presents how to deploy the code locally on your computer. As Motoko playground is working in the browser, <strong>you don&#x27;t need to set up your local development environment and install the SKD now</strong>. Skip this and just click to the Main.mo file on the left hand side. This will bring you to the code.</p>
 <p><figure class="content-center">
     <img src="../../static/motoko2.png" alt="Counter example code" />
     <figcaption class="caption">Counter example code</figcaption>
 </figure>
 </p>
-<p>This is how your workspace looks. On the left, you can manage files in your project, load packages and other canisters (smart contracts). In the bottom is a little console that shows you logs, this is where you look for error messagess when deploying. In the top right there is a Deploy button that we will use for deploying and testing our code.</p>
+<p>This is how your workspace looks. On the left, you can manage files in your project, load packages and other canisters (smart contracts). In the bottom is a little console that shows you logs, this is where you look for error messages when deploying. In the top right there is a Deploy button that we will use for deploying and testing our code.</p>
 <doc-anchor-target id="deploy-your-code">
     <h2>
         <doc-anchor-trigger class="header-anchor-trigger" to="#deploy-your-code">#</doc-anchor-trigger>
@@ -230,7 +230,7 @@
 };
 </code></pre>
 </doc-codeblock></div>
-<p>The actor has a stable variable counter, that will store the number of the counter and 3 public funcitons – get, set and inc. These functions form a public interface of our canister and we will see them in the generated Candid interface after deploy.</p>
+<p>The actor has a stable variable counter, that will store the number of the counter and 3 public functions – get, set and inc. These functions form a public interface of our canister and we will see them in the generated Candid interface after deploy.</p>
 <blockquote>
 <p>Candid is an IDL (interface definition language) developed for the IC ecosystem in order to facilitate communication between services written in different programing languages. You can read more about it <a href="https://medium.com/dfinity/candid-a-tool-for-interoperable-programming-languages-on-the-internet-computer-27e7085cd97f">here</a>.</p>
 </blockquote>
@@ -241,7 +241,7 @@
 </figure>
 </p>
 <p>First, you need to confirm the deploy by selecting a canister name and set up a garbage collector strategy. You can keep the settings as it is for now and click Install. You should see a success message in the console log.</p>
-<p>Motoko Playground is really deploying your canister to the network. As it serves for educational and testing purposes only, there are some limitations such as only 1 GB of data can be used and the canister will expier after 20 minutes. Using this playground is very convinient for new devs learning Motoko, as you don&#x27;t have to pay for cycles fees for deployment, which you would need to do when deploying to the mainnet directly.</p>
+<p>Motoko Playground is really deploying your canister to the network. As it serves for educational and testing purposes only, there are some limitations such as only 1 GB of data can be used and the canister will expire after 20 minutes. Using this playground is very convenient for new devs learning Motoko, as you don&#x27;t have to pay for cycles fees for deployment, which you would need to do when deploying to the mainnet directly.</p>
 <doc-anchor-target id="experiment-with-candid-ui">
     <h2>
         <doc-anchor-trigger class="header-anchor-trigger" to="#experiment-with-candid-ui">#</doc-anchor-trigger>
@@ -255,7 +255,7 @@
 </figure>
 </p>
 <p>As we mentioned above, Candid UI follows the interface defined in your Motoko code. You should see a form consisting of three functions get, inc and set. Function get and inc is not expecting any argument so you can click on Query or Call button and experiment with it. Function set is expecting a natural number (Nat) that you can pass in the input field.</p>
-<p>You will notice that query functions have very fast execution usually in terms of miliseconds. On the other hand, functions calling an update usually takes about 2 seconds.</p>
+<p>You will notice that query functions have very fast execution usually in terms of milliseconds. On the other hand, functions calling an update usually takes about 2 seconds.</p>
 <doc-anchor-target id="update-your-code">
     <h2>
         <doc-anchor-trigger class="header-anchor-trigger" to="#update-your-code">#</doc-anchor-trigger>
@@ -327,20 +327,29 @@ actor Counter {
         <span>Save &amp; share your code</span>
     </h2>
 </doc-anchor-target>
-<p>You know might want to save your code so you can open it later. You can either save the code and keep in in a local file or click on the Save &amp; Share button in the top-right corner. This will generate you an unique link that you can come back to later.</p>
+<p>You know might want to save your code so you can open it later. You can either save the code and keep it in a local file or click on the Save &amp; Share button in the top-right corner. This will generate you an unique link that you can come back to later.</p>
 <doc-anchor-target id="useful-resources-and-links">
     <h2>
         <doc-anchor-trigger class="header-anchor-trigger" to="#useful-resources-and-links">#</doc-anchor-trigger>
         <span>Useful resources and links</span>
     </h2>
 </doc-anchor-target>
-<p>If you want to experiment with more exapmles of Motoko code. You can again click on the Open tutorial button in the top right corner. More examples can be found in <a href="https://github.com/dfinity/examples/tree/master/motoko">this GitHub repo</a> which was made by Dfinity foundation. Lastly, there is a no-code Motoko editor <a href="https://blocks-editor.github.io/blocks/">Blocks</a> which contains some examples too and the Build &amp; Run button will deploy your code via Motoko Playground as well.</p>
+<p>If you want to experiment with more examples of Motoko code. You can again click on the Open tutorial button in the top right corner. More examples can be found in <a href="https://github.com/dfinity/examples/tree/master/motoko">this GitHub repo</a> which was made by Dfinity foundation. Lastly, there is a no-code Motoko editor <a href="https://blocks-editor.github.io/blocks/">Blocks</a> which contains some examples too and the Build &amp; Run button will deploy your code via Motoko Playground as well.</p>
 <p>Medium article a Yan Chen from Dfinity Foundation about Motoko Playground:<br />
 <a href="https://medium.com/dfinity/introducing-the-motoko-playground-an-online-development-environment-for-the-internet-computer-efb4cd09ea8b">https://medium.com/dfinity/introducing-the-motoko-playground-an-online-development-environment-for-the-internet-computer-efb4cd09ea8b</a></p>
-<p>Community converstaion from Dfinity also with Yan Chen about Motoko Playground:<br />
+<p>Community conversation from Dfinity also with Yan Chen about Motoko Playground:<br />
 <a href="https://www.youtube.com/watch?v=A_RbxhN0BHI">https://www.youtube.com/watch?v=A_RbxhN0BHI</a></p>
 <p>Link to a Motoko documentation page:<br />
 <a href="https://smartcontracts.org/docs/language-guide/motoko.html">https://smartcontracts.org/docs/language-guide/motoko.html</a></p>
+<doc-anchor-target id="the-author">
+    <h4>
+        <doc-anchor-trigger class="header-anchor-trigger" to="#the-author">#</doc-anchor-trigger>
+        <span>The author</span>
+    </h4>
+</doc-anchor-target>
+<blockquote>
+<p>This tutorial was written by Lukas Vozda. If you find some resources out of date, have some suggestions or just want to get in touch. You can find me on Twitter <a href="https://mobile.twitter.com/lukas_icp">@lukas_icp</a> or Discord LukeVoz#0574.</p>
+</blockquote>
 
                                 
                                 <!-- Required only on API pages -->
