--- a/.retype/tutorials/serving_svg_over_http/index.html
+++ b/.retype/tutorials/serving_svg_over_http/index.html
@@ -11,29 +11,29 @@
     <!-- Primary Meta Tags -->
     <title>Serving simple SVG over HTTP</title>
     <meta name="title" content="Serving simple SVG over HTTP">
-    <meta name="description" content="In this tutorial, things are going to get more excited. We are going to learn how to serve a SVG image over HTTP(s) directly from your canister." />
+    <meta name="description" content="In this tutorial, things are going to get more exciting. We are going to learn how to serve a SVG image over HTTP(s) directly from your canister." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tutorials.icdevs.org/tutorials/serving_svg_over_http/">
     <meta property="og:title" content="Serving simple SVG over HTTP">
-    <meta property="og:description" content="In this tutorial, things are going to get more excited. We are going to learn how to serve a SVG image over HTTP(s) directly from your canister.">
+    <meta property="og:description" content="In this tutorial, things are going to get more exciting. We are going to learn how to serve a SVG image over HTTP(s) directly from your canister.">
     <meta property="og:image" content="https://tutorials.icdevs.org/static/infinity.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://tutorials.icdevs.org/tutorials/serving_svg_over_http/">
     <meta property="twitter:title" content="Serving simple SVG over HTTP">
-    <meta property="twitter:description" content="In this tutorial, things are going to get more excited. We are going to learn how to serve a SVG image over HTTP(s) directly from your canister.">
+    <meta property="twitter:description" content="In this tutorial, things are going to get more exciting. We are going to learn how to serve a SVG image over HTTP(s) directly from your canister.">
     <meta property="twitter:image" content="https://tutorials.icdevs.org/static/infinity.png">
 
     <script>(function () { var el = document.documentElement, m = localStorage.getItem("doc_theme"), wm = window.matchMedia; if (m === "dark" || (!m && wm && wm("(prefers-color-scheme: dark)").matches)) { el.classList.add("dark") } else { el.classList.remove("dark") } })();</script>
 
-    <link href="/resources/css/retype.css?v=2.2.704998675325" rel="stylesheet" data-turbo-track="reload" />
+    <link href="/resources/css/retype.css?v=2.2.705868030699" rel="stylesheet" data-turbo-track="reload" />
 
-    <script type="text/javascript" src="/resources/js/config.js?v=2.2.704998675325" defer data-turbo-track="reload"></script>
+    <script type="text/javascript" src="/resources/js/config.js?v=2.2.705868030699" defer data-turbo-track="reload"></script>
     <script type="text/javascript" src="/resources/js/retype.js?v=2.2" defer data-turbo-track="reload"></script>
-    <script id="lunr-js" type="text/javascript" src="/resources/js/lunr.js?v=2.2.704998675325" defer></script>
+    <script id="lunr-js" type="text/javascript" src="/resources/js/lunr.js?v=2.2.705868030699" defer></script>
 </head>
 <body>
     <div id="docs-app" class="relative text-base antialiased text-gray-700 bg-white font-body dark:bg-dark-850 dark:text-dark-300">
@@ -169,9 +169,9 @@
         <span>Serving simple SVG over HTTP</span>
     </h1>
 </doc-anchor-target>
-<p>In this tutorial, things are going to get more excited. We are going to learn how to serve a SVG image over HTTP(s) directly from your canister. <strong>Yes – canisters can serve web content over HTTP!</strong> You are probably familiar with that as it is one of the main advantages of the Internet Computer over the other blockchains. But there is also a <strong>http_request()</strong> function that you can use in Motoko to define how exactly is your canister going to behave when contacted over HTTP protocol.</p>
-<p>This could be useful when you want to serve custom SVG images or define custom api endpoint over the URL. Serving a dynamic NFT file is what we&#x27;re going to do now.</p>
-<p>We are going to use <a href="/tutorials/motoko_playground/">Motoko Playground</a> for deploying the code, this will give you a quick start without needing to setting up your local enviroment.</p>
+<p>In this tutorial, things are going to get more exciting. We are going to learn how to serve a SVG image over HTTP(s) directly from your canister. <strong>Yes – canisters can serve web content over HTTP!</strong> You are probably familiar with that as it is one of the main advantages of the Internet Computer over the other blockchains. But there is also a <strong>http_request()</strong> function that you can use in Motoko to define how exactly is your canister going to behave when contacted over HTTP protocol.</p>
+<p>This could be useful when you want to serve custom SVG images or define a custom api endpoint over the URL. Serving a dynamic NFT file is what we&#x27;re going to do now.</p>
+<p>We are going to use <a href="/tutorials/motoko_playground/">Motoko Playground</a> for deploying the code, this will give you a quick start without needing to set up your local environment.</p>
 <doc-anchor-target id="http-requests">
     <h2>
         <doc-anchor-trigger class="header-anchor-trigger" to="#http-requests">#</doc-anchor-trigger>
@@ -179,7 +179,7 @@
     </h2>
 </doc-anchor-target>
 <p>We are going to start with this skeleton <a href="https://github.com/motoko-bootcamp/bootcamp/blob/main/daily_challenges/day_6/GUIDE.MD#http-request">template</a> used for educational purposes during the Motoko Bootcamp event.</p>
-<p>The template contains of two files, first the module file http.mo that contains types needed for HTTP communication from the canister.</p>
+<p>The template contains two files, first the module file http.mo that contains types needed for HTTP communication from the canister.</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">module {
     public type HeaderField = (Text, Text);
@@ -219,7 +219,7 @@
 
 };</code></pre>
 </doc-codeblock></div>
-<p>If the code seems too exotic to you, please check this <a href="https://www.youtube.com/watch?v=iYM2zFP3Zn0">video</a> that is explaining basics of HTTP protocol. The most key part for our case in this tutorial are the Request and Response types that play the main role in our simple HTTP communication.</p>
+<p>If the code seems too exotic to you, please check this <a href="https://www.youtube.com/watch?v=iYM2zFP3Zn0">video</a> that is explaining basics of the HTTP protocol. The most key part for our case in this tutorial are the Request and Response types that play the main role in our simple HTTP communication.</p>
 <p>The second file is your main.mo file that loads the module http and contains a simple function http_request that puts it all together.</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">import HTTP &quot;http&quot;;
@@ -241,14 +241,14 @@ actor {
 <pre class="language-none"><code v-pre class="language-none">https://wch4f-miaaa-aaaab-qadfa-cai.raw.ic0.app/</code></pre>
 </doc-codeblock></div>
 <p>If all goes fine and you open your URL in your browser you should see the Hello world message.</p>
-<p>Notice that there is a &quot;raw&quot; keyword in the URL. Raw in the URL means we are serving non certified assets. This certification means that IC guarantees that you are getting right data. Certification can be expensive as it can cost a lot of assets so it only makes sense when serving very important data. You would need to implement a hash function for certification which is beyond the scope of this tutorial.</p>
+<p>Notice that there is a &quot;raw&quot; keyword in the URL. Raw in the URL means we are serving non certified assets. This certification means that IC guarantees that you are getting right the data. Certification can be expensive as it can cost a lot of assets so it only makes sense when serving very important data. You would need to implement a hash function for certification which is beyond the scope of this tutorial.</p>
 <doc-anchor-target id="svg-image">
     <h2>
         <doc-anchor-trigger class="header-anchor-trigger" to="#svg-image">#</doc-anchor-trigger>
         <span>SVG image</span>
     </h2>
 </doc-anchor-target>
-<p>Now, let&#x27;s put some SVG image into works. SVGs are basically text files that carry vector information about some visual. You can easily find any SVG file online and use it or you can use the same as we. Create a text variable called svg that will contain data about your curve.</p>
+<p>Now, let&#x27;s put some SVG images into work. SVGs are basically text files that carry vector information about some visuals. You can easily find any SVG file online and use it or you can use the same as we. Create a text variable called svg that will contain data about your curve.</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">let svg : Text = &quot;&lt;svg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px'viewBox='0 0 2703.214 1272.608' style='enable-background:new 0 0 2703.214 1272.608;' xml:space='default'&gt;&lt;g&gt;&lt;g&gt;&quot; #
 		    &quot;&lt;path fill='black' d='M72.373,651.52C62.109,212.429,541.276-95.972,961.842,145.033c138.551,79.397,256.167,196.988,382.632,325.418 c5.749,5.839,8.404,5.236,13.785-0.188c197.808-199.402,484.222-503.454,885.399-385.157 c168.833,49.784,286.15,159.321,346.255,324.377c201.16,552.413-375.869,1009.769-870.693,706.588 c-124.801-76.466-232.581-181.978-359.98-311.726c-6.801-6.927-9.868-5.946-16.086,0.324c-144.739,145.956-300.538,304.607-492.977,371.024C458.575,1310.846,83.17,1077.492,72.373,651.52z M317.418,643.008 c12.485,253.639,207.59,371.88,415.468,326.918c179.653-38.857,330.36-196.86,458.721-328.811c4.325-4.446,1.9-6.251-1.072-9.025 c-111.488-104.066-220.365-231.184-357.581-296.6C567.01,208.705,316.523,394.639,317.418,643.008z M2385.265,632.288 c-7.903-245.124-201.289-378.703-424.132-326.433c-175.334,41.126-325.161,198.381-449.641,326.279 c-4.318,4.437-2.66,6.509,0.879,9.811c155.637,145.245,339.3,374.567,587.443,332.772 C2265.103,946.877,2385.634,802.91,2385.265,632.288z'/&gt;&lt;/g&gt;&lt;/g&gt;&lt;/svg&gt;&quot;;
@@ -259,7 +259,7 @@ actor {
 <pre class="language-none"><code v-pre class="language-none">body = Text.encodeUtf8(svg);</code></pre>
 </doc-codeblock></div>
 <p>You could also adjust the header format of the return type if you want to be precise, but it will work with text/html as well.</p>
-<p>Now if you deploy your code and try to refresh your canister page again in the browser, you should see the SVG image instead of Hello, World message. Beautifull infinity symbol.</p>
+<p>Now if you deploy your code and try to refresh your canister page again in the browser, you should see the SVG image instead of the Hello, World message. Beautiful infinity symbol.</p>
 <p><figure class="content-center">
     <img src="../../static/infinity.png" alt="SVG infinity symbol from the canister" />
     <figcaption class="caption">SVG infinity symbol from the canister</figcaption>
@@ -291,7 +291,7 @@ actor {
         &quot;&lt;path fill='&quot; # result_color # &quot;'d='M72.373,651.52C62.109,212.429,541.276-95.972,961.842,145.033c138.551,79.397,256.167,196.988,382.632,325.418 c5.749,5.839,8.404,5.236,13.785-0.188c197.808-199.402,484.222-503.454,885.399-385.157 c168.833,49.784,286.15,159.321,346.255,324.377c201.16,552.413-375.869,1009.769-870.693,706.588 c-124.801-76.466-232.581-181.978-359.98-311.726c-6.801-6.927-9.868-5.946-16.086,0.324c-144.739,145.956-300.538,304.607-492.977,371.024C458.575,1310.846,83.17,1077.492,72.373,651.52z M317.418,643.008 c12.485,253.639,207.59,371.88,415.468,326.918c179.653-38.857,330.36-196.86,458.721-328.811c4.325-4.446,1.9-6.251-1.072-9.025 c-111.488-104.066-220.365-231.184-357.581-296.6C567.01,208.705,316.523,394.639,317.418,643.008z M2385.265,632.288 c-7.903-245.124-201.289-378.703-424.132-326.433c-175.334,41.126-325.161,198.381-449.641,326.279 c-4.318,4.437-2.66,6.509,0.879,9.811c155.637,145.245,339.3,374.567,587.443,332.772 C2265.103,946.877,2385.634,802.91,2385.265,632.288z'/&gt;&lt;/g&gt;&lt;/g&gt;&lt;/svg&gt;&quot;;
 };</code></pre>
 </doc-codeblock></div>
-<p>We are first looping through our colors array to find out if color is in it. If it is found we assign it as a result_color, if it is not inside we will use &quot;black&quot; as default. Notice that we are contatenating the SVG string with the color name.</p>
+<p>We are first looping through our colors array to find out if color is in it. If it is found we assign it as a result_color, if it is not inside we will use &quot;black&quot; as default. Notice that we are concatenating the SVG string with the color name.</p>
 <p>Now let&#x27;s change the http_request() function, so it gets the /path from the request and call the color_svg function, that will return the SVG code with the right color.</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">public query func http_request(request : HTTP.Request) : async HTTP.Response {
@@ -317,7 +317,7 @@ https://wch4f-miaaa-aaaab-qadfa-cai.raw.ic0.app/green</code></pre>
     <figcaption class="caption">SVG rendered with specific color</figcaption>
 </figure>
 </p>
-<p>Try to put something else than registered color name in the URL, you should see the default black symbol.</p>
+<p>Try to put something other than registered color name in the URL, you should see the default black symbol.</p>
 <p>Here is the full working code in the Motoko Playground in case you got lost somewhere.</p>
 <p><strong>Main.mo</strong></p>
 <div class="codeblock-wrapper"><doc-codeblock>
@@ -407,6 +407,15 @@ actor {
 <a href="https://smartcontracts.org/docs/http-middleware.html#_enabling_canisters_to_respond_to_http_requests">https://smartcontracts.org/docs/http-middleware.html#_enabling_canisters_to_respond_to_http_requests</a></p>
 <p>Motoko example HTTP counter from Dfinity<br />
 <a href="https://github.com/dfinity/examples/blob/master/motoko/http_counter/src/main.mo">https://github.com/dfinity/examples/blob/master/motoko/http_counter/src/main.mo</a></p>
+<doc-anchor-target id="the-author">
+    <h4>
+        <doc-anchor-trigger class="header-anchor-trigger" to="#the-author">#</doc-anchor-trigger>
+        <span>The author</span>
+    </h4>
+</doc-anchor-target>
+<blockquote>
+<p>This tutorial was written by Lukas Vozda. If you find some resources out of date, have some suggestions or just want to get in touch. You can find me on Twitter <a href="https://mobile.twitter.com/lukas_icp">@lukas_icp</a> or Discord LukeVoz#0574.</p>
+</blockquote>
 
                                 
                                 <!-- Required only on API pages -->
@@ -416,11 +425,11 @@ actor {
                             
                                 <nav class="flex mt-14">
                                     <div class="w-1/2">
-                                        <a class="px-5 py-4 h-full flex items-center break-normal font-medium text-blue-500 dark:text-blue-400 border border-gray-300 hover:border-gray-400 dark:border-dark-650 dark:hover:border-dark-450 rounded-l-lg transition-colors duration-150 relative hover:z-5" href="/tutorials/understanding_types/">
+                                        <a class="px-5 py-4 h-full flex items-center break-normal font-medium text-blue-500 dark:text-blue-400 border border-gray-300 hover:border-gray-400 dark:border-dark-650 dark:hover:border-dark-450 rounded-l-lg transition-colors duration-150 relative hover:z-5" href="/tutorials/null_variants_switch/">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="mr-3" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" overflow="visible"><path d="M19 11H7.41l5.29-5.29a.996.996 0 10-1.41-1.41l-7 7a1 1 0 000 1.42l7 7a1.024 1.024 0 001.42-.01.996.996 0 000-1.41L7.41 13H19c.55 0 1-.45 1-1s-.45-1-1-1z" /><path fill="none" d="M0 0h24v24H0z" /></svg>
                                             <span>
                                                 <span class="block text-xs font-normal text-gray-400 dark:text-dark-400">Previous</span>
-                                                <span class="block mt-1">Understanding types</span>
+                                                <span class="block mt-1">Null, variants and the switch statement</span>
                                             </span>
                                         </a>
                                     </div>
