--- a/.retype/tutorials/understanding_types/index.html
+++ b/.retype/tutorials/understanding_types/index.html
@@ -27,11 +27,11 @@
 
     <script>(function () { var el = document.documentElement, m = localStorage.getItem("doc_theme"), wm = window.matchMedia; if (m === "dark" || (!m && wm && wm("(prefers-color-scheme: dark)").matches)) { el.classList.add("dark") } else { el.classList.remove("dark") } })();</script>
 
-    <link href="/resources/css/retype.css?v=2.2.704998675325" rel="stylesheet" data-turbo-track="reload" />
+    <link href="/resources/css/retype.css?v=2.2.705868030699" rel="stylesheet" data-turbo-track="reload" />
 
-    <script type="text/javascript" src="/resources/js/config.js?v=2.2.704998675325" defer data-turbo-track="reload"></script>
+    <script type="text/javascript" src="/resources/js/config.js?v=2.2.705868030699" defer data-turbo-track="reload"></script>
     <script type="text/javascript" src="/resources/js/retype.js?v=2.2" defer data-turbo-track="reload"></script>
-    <script id="lunr-js" type="text/javascript" src="/resources/js/lunr.js?v=2.2.704998675325" defer></script>
+    <script id="lunr-js" type="text/javascript" src="/resources/js/lunr.js?v=2.2.705868030699" defer></script>
 </head>
 <body>
     <div id="docs-app" class="relative text-base antialiased text-gray-700 bg-white font-body dark:bg-dark-850 dark:text-dark-300">
@@ -168,7 +168,7 @@
     </h1>
 </doc-anchor-target>
 <p>Now that we learned about <a href="/tutorials/primitive_types/">primitive types</a> in the previous lecture, let&#x27;s move on to non-primitive types. In this tutorial, we are going to demonstrate how to declare them and build them with primitive types.</p>
-<p>This is a natural process as non-primitive values can be <strong>user-defined</strong>, meaning that you can build objects or structures that combines multiple primitive types together.</p>
+<p>This is a natural process as non-primitive values can be <strong>user-defined</strong>, meaning that you can build objects or structures that combine multiple primitive types together.</p>
 <doc-anchor-target id="non-primitive-types">
     <h2>
         <doc-anchor-trigger class="header-anchor-trigger" to="#non-primitive-types">#</doc-anchor-trigger>
@@ -182,7 +182,7 @@
         <span>1. Tuples</span>
     </h3>
 </doc-anchor-target>
-<p>Tuples are simple objects that can contain multiple elements. These elements can be different types but you can&#x27;t change number of elements after you declare it. You could create a simple tuple type to store name and surname for a person:</p>
+<p>Tuples are simple objects that can contain multiple elements. These elements can be different types but you can&#x27;t change the number of elements after you declare it. You could create a simple tuple type to store name and surname for a person:</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">type person = (Text, Text);
 
@@ -214,24 +214,24 @@ let me = (&quot;John&quot;, &quot;Doe&quot;, 25);</code></pre>
 </doc-codeblock></div>
 <p>Now as we defined an immutable array with the type of text, Motoko playground will not let you include any other value than text, also it doesn&#x27;t let you to update the value:</p>
 <div class="codeblock-wrapper"><doc-codeblock>
-<pre class="language-none"><code v-pre class="language-none">days[0] := &quot;Tuesday&quot;; // Not ok - Expected mutable target assigment
+<pre class="language-none"><code v-pre class="language-none">days[0] := &quot;Tuesday&quot;; // Not ok - Expected mutable target assignment
 days := [&quot;Sunday&quot;, &quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wednesday&quot;, &quot;Thursday&quot;, &quot;Friday&quot;, &quot;Saturday&quot;]; // Not ok - The same problem</code></pre>
 </doc-codeblock></div>
-<p>Let&#x27;s make a first excersise. Try to write a function called getDay, that will take a Nat as an argument and returns a name of the corresponding day.</p>
+<p>Let&#x27;s do a first exersise. Try to write a function called getDay, that will take a Nat as an argument and returns a name of the corresponding day.</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">public query func getDay(n : Nat) : async Text {
 	return days[n];
 };</code></pre>
 </doc-codeblock></div>
-<p>Here we go. That was simple. You can notice 2 things – function is very well defined with types in the input as well as in the output, if you try to put anything else then natural number it is not going to work.</p>
-<p>Also, we are using the <strong>query</strong> keyword in the function declaration which will make the function execution much faster. It is a very good idea to use query function anytime we are not trying to update values in the backend of our app.</p>
+<p>Here we go. That was simple. You can notice 2 things – function is very well defined with types in the input as well as in the output, if you try to put anything else than a natural number it is not going to work.</p>
+<p>Also, we are using the <strong>query</strong> keyword in the function declaration which will make the function execution much faster. It is a very good idea to use a query function anytime we are not trying to update values in the backend of our app.</p>
 <doc-anchor-target id="21-mutable-arrays">
     <h4>
         <doc-anchor-trigger class="header-anchor-trigger" to="#21-mutable-arrays">#</doc-anchor-trigger>
         <span>2.1 Mutable arrays</span>
     </h4>
 </doc-anchor-target>
-<p>Declaration of a mutable array is very similar to immutable array. The key difference is using the var keyword. Let&#x27;s try to declare an immutable array.</p>
+<p>Declaration of a mutable array is very similar to an immutable array. The key difference is using the var keyword. Let&#x27;s try to declare an immutable array.</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">var days : [Text] = [&quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wednesday&quot;, &quot;Thursday&quot;, &quot;Friday&quot;, &quot;Saturday&quot;, &quot;Sunday&quot;];</code></pre>
 </doc-codeblock></div>
@@ -241,9 +241,9 @@ days := [&quot;Sunday&quot;, &quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wedn
 </doc-codeblock></div>
 <p>You could also change the number of elements inside freely. However, you still can&#x27;t change an element inside individually as only the whole array is mutable but the content inside is not:</p>
 <div class="codeblock-wrapper"><doc-codeblock>
-<pre class="language-none"><code v-pre class="language-none">days[0] := &quot;Tuesday&quot;; // Not ok - expected mutable assigment target</code></pre>
+<pre class="language-none"><code v-pre class="language-none">days[0] := &quot;Tuesday&quot;; // Not ok - expected mutable assignment target</code></pre>
 </doc-codeblock></div>
-<p>If you woul like to make a totally mutable array, you need to use the <strong>var</strong> keyword also inside the declaration. Here is the full working code of a mutable array:</p>
+<p>If you would like to make a totally mutable array, you need to use the <strong>var</strong> keyword also inside the declaration. Here is the full working code of a mutable array:</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">actor Days {
     var days : [var Text] = [var &quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wednesday&quot;, &quot;Thursday&quot;, &quot;Friday&quot;, &quot;Saturday&quot;, &quot;Sunday&quot;];
@@ -258,8 +258,8 @@ days := [&quot;Sunday&quot;, &quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wedn
 
 };</code></pre>
 </doc-codeblock></div>
-<p>If you run this code in you Motoko Playground and try tu run the function in the Candid UI, you should get &quot;Sunday&quot; for the index of 0.</p>
-<p>If you&#x27;d like to make immutable array mutable and vice versa, you need to use functions from the <a href="https://smartcontracts.org/docs/current/references/motoko-ref/array">Array section</a> of the Motoko base library. Specifically it is thaw function to make array mutable and freeze function to make it immutable.</p>
+<p>If you run this code in your Motoko Playground and try to run the function in the Candid UI, you should get &quot;Sunday&quot; for the index of 0.</p>
+<p>If you&#x27;d like to make the immutable array mutable and vice versa, you need to use functions from the <a href="https://smartcontracts.org/docs/current/references/motoko-ref/array">Array section</a> of the Motoko base library. Specifically it is the thaw function to make the array mutable and the freeze function to make it immutable.</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">import Array &quot;mo:base/Array&quot;;
 
@@ -274,7 +274,7 @@ actor Days {
     days_mutable[0] := &quot;Hello&quot;;
 };</code></pre>
 </doc-codeblock></div>
-<p>Notice that after using the thaw function, we can assign another array to the variable or even assign a value to a specific index. This wouldn&#x27;t be possible with immutable array.</p>
+<p>Notice that after using the thaw function, we can assign another array to the variable or even assign a value to a specific index. This wouldn&#x27;t be possible with the immutable array.</p>
 <doc-anchor-target id="3-records">
     <h3>
         <doc-anchor-trigger class="header-anchor-trigger" to="#3-records">#</doc-anchor-trigger>
@@ -310,7 +310,7 @@ let person1 : Person = {
 };
 
 person1.age += 1; // Ok
-person1.name := &quot;Adam&quot;; // Not ok, expected mutable assigment target</code></pre>
+person1.name := &quot;Adam&quot;; // Not ok, expected mutable assignment target</code></pre>
 </doc-codeblock></div>
 <doc-anchor-target id="4-variants">
     <h3>
@@ -385,7 +385,7 @@ person1.status := #married;</code></pre>
         <span>Functions from Motoko base library</span>
     </h4>
 </doc-anchor-target>
-<p>Like we presented in the array section, there is plenty of functions available in the <a href="https://smartcontracts.org/docs/current/references/motoko-ref/array">Motoko base library</a>. There is a section for each type. These functions are called from the imported module like we did with the thaw function:</p>
+<p>Like we presented in the array section, there are plenty of functions available in the <a href="https://smartcontracts.org/docs/current/references/motoko-ref/array">Motoko base library</a>. There is a section for each type. These functions are called from the imported module like we did with the thaw function:</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">import Array &quot;mo:base/Array&quot;;
 &lt;some code&gt;
@@ -393,14 +393,14 @@ var days_mutable = Array.thaw&lt;Text&gt;(days);
 &lt;some code&gt;</code></pre>
 </doc-codeblock></div>
 <p>Notice that some functions require to define the data type in the &lt;&gt; brackets.</p>
-<p>Go through the base library and check what is inside for each type. These funcitons are going to save your time when writing your programs. However, please respect that Motoko is still quite a fresh language and there is not yet as many functions available as for more mature languages.</p>
+<p>Go through the base library and check what is inside for each type. These functions are going to save your time when writing your programs. However, please respect that Motoko is still quite a fresh language and there are not yet as many functions available as are with more mature languages.</p>
 <doc-anchor-target id="anonymous-functions">
     <h4>
         <doc-anchor-trigger class="header-anchor-trigger" to="#anonymous-functions">#</doc-anchor-trigger>
         <span>Anonymous functions</span>
     </h4>
 </doc-anchor-target>
-<p>Anonymous functions are also known as lambdas. You define them for generic purpose in your program to complete small tasks. They are not ment to be part of the public interface.</p>
+<p>Anonymous functions are also known as lambdas. You define them for generic purposes in your program to complete small tasks. They are not meant to be part of the public interface.</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">func add(x : Int, y : Int) : Int = x + y;</code></pre>
 </doc-codeblock></div>
@@ -410,7 +410,7 @@ var days_mutable = Array.thaw&lt;Text&gt;(days);
         <span>6. Async values</span>
     </h3>
 </doc-anchor-target>
-<p>When canisters or actors communicate with each other on the Internet Computer, it happens asynchronously. Messagess are processed one after another (in sequence) in an isolated way.</p>
+<p>When canisters or actors communicate with each other on the Internet Computer, it happens asynchronously. Messages are processed one after another (in sequence) in an isolated way.</p>
 <p>Let&#x27;s have a look at an example from the <a href="https://smartcontracts.org/docs/developers-guide/basic-syntax-rules.html#_actors_and_asynchronous_messaging">documentation page</a>:</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">let result1 = await service1.computeAnswer(params);
@@ -424,7 +424,7 @@ finalStep(result1, result2)</code></pre>
         <span>7. Optional values</span>
     </h3>
 </doc-anchor-target>
-<p>Optional values are used when we are expecting a specific type but it can be <strong>null</strong> as well. Optional values are defined with question mark and can be mostly found in the record type declaration or in functions.</p>
+<p>Optional values are used when we are expecting a specific type but it can be <strong>null</strong> as well. Optional values are defined with question marks and can be mostly found in the record type declaration or in functions.</p>
 <p>Let&#x27;s extend the Person model from above and add another parameter partner that will point to another person instance. Naturally, single persons will not have a partner so we must keep this parameter optional.</p>
 <div class="codeblock-wrapper"><doc-codeblock>
 <pre class="language-none"><code v-pre class="language-none">public type Status = {
@@ -457,7 +457,7 @@ let person2 : Person = {
     var partner = ?person1; // in real situation, we should also update the status of person1 and person2 and set partner for person1 if the relationship is symmetrical 
 };</code></pre>
 </doc-codeblock></div>
-<p>Optional values play significant roles also in function definitions as funciton can as well expect or return a null value. There will be more detailed tutorial on that soon.</p>
+<p>Optional values play significant roles also in function definitions as function can as well expect or return a null value. There will be a more detailed tutorial on that soon.</p>
 <doc-anchor-target id="useful-links-and-resources">
     <h2>
         <doc-anchor-trigger class="header-anchor-trigger" to="#useful-links-and-resources">#</doc-anchor-trigger>
@@ -468,6 +468,15 @@ let person2 : Person = {
 <a href="https://www.youtube.com/watch?v=4YX41Nm7Wx8">https://www.youtube.com/watch?v=4YX41Nm7Wx8</a></p>
 <p>Motoko Bootcamp video about variants by Paul Young<br />
 <a href="https://www.youtube.com/watch?v=GFenqSGhj7I&amp;">https://www.youtube.com/watch?v=GFenqSGhj7I&amp;</a></p>
+<doc-anchor-target id="the-author">
+    <h4>
+        <doc-anchor-trigger class="header-anchor-trigger" to="#the-author">#</doc-anchor-trigger>
+        <span>The author</span>
+    </h4>
+</doc-anchor-target>
+<blockquote>
+<p>This tutorial was written by Lukas Vozda. If you find some resources out of date, have some suggestions or just want to get in touch. You can find me on Twitter <a href="https://mobile.twitter.com/lukas_icp">@lukas_icp</a> or Discord LukeVoz#0574.</p>
+</blockquote>
 
                                 
                                 <!-- Required only on API pages -->
@@ -487,10 +496,10 @@ let person2 : Person = {
                                     </div>
                             
                                     <div class="w-1/2">
-                                        <a class="px-5 py-4 -mx-px h-full flex items-center justify-end break-normal font-medium text-blue-500 dark:text-blue-400 border border-gray-300 hover:border-gray-400 dark:border-dark-650 dark:hover:border-dark-450 rounded-r-lg transition-colors duration-150 relative hover:z-5" href="/tutorials/serving_svg_over_http/">
+                                        <a class="px-5 py-4 -mx-px h-full flex items-center justify-end break-normal font-medium text-blue-500 dark:text-blue-400 border border-gray-300 hover:border-gray-400 dark:border-dark-650 dark:hover:border-dark-450 rounded-r-lg transition-colors duration-150 relative hover:z-5" href="/tutorials/null_variants_switch/">
                                             <span>
                                                 <span class="block text-xs font-normal text-right text-gray-400 dark:text-dark-400">Next</span>
-                                                <span class="block mt-1">Serving simple SVG over HTTP</span>
+                                                <span class="block mt-1">Null, variants and the switch statement</span>
                                             </span>
                                             <svg xmlns="http://www.w3.org/2000/svg" class="ml-3" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" overflow="visible"><path d="M19.92 12.38a1 1 0 00-.22-1.09l-7-7a.996.996 0 10-1.41 1.41l5.3 5.3H5c-.55 0-1 .45-1 1s.45 1 1 1h11.59l-5.29 5.29a.996.996 0 000 1.41c.19.2.44.3.7.3s.51-.1.71-.29l7-7c.09-.09.16-.21.21-.33z" /><path fill="none" d="M0 0h24v24H0z" /></svg>
                                         </a>
